# nlp-metaformer

./: .actrc  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yml  dev_sentiment_analysis.ipynb  explore.ipynb  inference.py  info.py  logger.py  run.sh  sentiment-analysis(1).ipynb  sentiment-analysis-pyspark-data-prep.ipynb  train.ipynb  train_config.py  train_worker.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreateCommand.sh  requirements.txt  resolv.conf
core/: constants.py  logger.py  mixins.py  types.py
data/: Dockerfile  amazon-sentiment-analysis-pre-process.ipynb  backend.py  celery_app.py  data.py  main.py  test.npz  test.py  train_0.npz  train_1.npz  worker.py
gpt_array_sorter/: data.py  mlflow_handler.py  model_handler.py  spot_handler.py  spotty.yaml  train.py  train_config.py  train_main.py  train_worker.py  user_data.sh
gpt_shakespear/: explore.ipynb  inference.py  train_config.py  train_main.py  train_worker.py  user_data.sh
mlflow/: Dockerfile  docker-compose.yml
model/: __init__.py  __main__.py  perceptron.py  self_attention.py  sequence_encoder.py  transformer_block.py
mtn_shakespeare/: train_worker.py
pipelines/: capacity.py  commons.py  deploy.py  pipeline.py  requirements.txt  sentiment_analysis.py
scripts/: stop.sh
src/: build.rs  config.rs  files.rs  main.rs  mlflow.rs  optimizer.rs  test.py
stanfordSentimentTreebank/: datasetSentences.txt  sentiment_labels.txt  to_pickle.ipynb
train/: Dockerfile  config.py  main.py  mlflow.pyi  pipe.py  sentiment_analysis.py  (+4 more)
(+120 files in other folders)
