[package]
name = "llm-voice-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.197"
serde_yaml = "0.9.32"
tch = "0.15.0"
