[package]
name = "llm-voice-chat"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
cc = "1.0.90"
clap = { version = "4.5.1", features = ["derive", "env"] }
colored = "2.1.0"
libc = "0.2.153"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.197"
serde_yaml = "0.9.32"
tch = "0.15.0"

[build-dependencies]
cc = "1.0"
